<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <TextView
            style="@style/question_content_layout"
            android:gravity="center"
            android:text="@string/ff1_quiz_op"
            android:textSize="@dimen/title_size" />

        <LinearLayout style="@style/question_layout">

            <TextView
                style="@style/question_content_layout"
                android:text="@string/question_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/question_content_layout"
                        android:text="@string/question_1_answer_1" />

                    <RadioButton
                        android:id="@+id/question_1_correct"
                        style="@style/question_content_layout"
                        android:text="@string/question_1_answer_2" />

                    <RadioButton
                        style="@style/question_content_layout"
                        android:text="@string/question_1_answer_3" />

                    <RadioButton
                        style="@style/question_content_layout"
                        android:text="@string/question_1_answer_4" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout style="@style/question_layout">

            <TextView
                android:id="@+id/question_2_text"
                style="@style/question_content_layout"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/question_2_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_2_text">

                <RadioButton
                    style="@style/question_content_layout"
                    android:text="@string/answer_true" />

                <RadioButton
                    android:id="@+id/question_2_correct"
                    style="@style/question_content_layout"
                    android:text="@string/answer_false" />

            </RadioGroup>

            <ImageView
                style="@style/image_attributes"
                android:layout_below="@id/question_2_text"
                android:src="@drawable/blk_mage" />

        </RelativeLayout>

        <LinearLayout style="@style/question_layout">

            <TextView
                style="@style/question_content_layout"
                android:text="@string/question_3" />

            <EditText
                android:id="@+id/question_3_input"
                style="@style/question_content_layout"
                android:hint="@string/question_3_field"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout style="@style/question_layout">

            <TextView
                style="@style/question_content_layout"
                android:text="@string/question_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <CheckBox
                        android:id="@+id/question_4_1"
                        style="@style/question_content_layout"
                        android:text="@string/question_4_answer_1" />

                    <CheckBox
                        android:id="@+id/question_4_2"
                        style="@style/question_content_layout"
                        android:text="@string/question_4_answer_2" />

                    <CheckBox
                        android:id="@+id/question_4_3"
                        style="@style/question_content_layout"
                        android:text="@string/question_4_answer_3" />

                    <CheckBox
                        android:id="@+id/question_4_4"
                        style="@style/question_content_layout"
                        android:text="@string/question_4_answer_4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <CheckBox
                        android:id="@+id/question_4_5"
                        style="@style/question_content_layout"
                        android:text="@string/question_4_answer_5" />

                    <CheckBox
                        android:id="@+id/question_4_6"
                        style="@style/question_content_layout"
                        android:text="@string/question_4_answer_6" />

                    <CheckBox
                        android:id="@+id/question_4_7"
                        style="@style/question_content_layout"
                        android:text="@string/question_4_answer_7" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/question_layout">

            <TextView
                style="@style/question_content_layout"
                android:text="@string/question_5" />

            <EditText
                android:id="@+id/question_5_input"
                style="@style/question_content_layout"
                android:hint="@string/question_5_field"
                android:inputType="number" />

        </LinearLayout>

        <RelativeLayout style="@style/question_layout">

            <TextView
                android:id="@+id/question_6_text"
                style="@style/question_content_layout"
                android:text="@string/question_6" />

            <RadioGroup
                android:id="@+id/question_6_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_6_text">

                <RadioButton
                    android:id="@+id/question_6_correct"
                    style="@style/question_content_layout"
                    android:text="@string/question_6_answer_1" />

                <RadioButton
                    style="@style/question_content_layout"
                    android:text="@string/question_6_answer_2" />

                <RadioButton
                    style="@style/question_content_layout"
                    android:text="@string/question_6_answer_3" />

            </RadioGroup>

        </RelativeLayout>


        <Button
            style="@style/button_layout"
            android:layout_gravity="center"
            android:onClick="submitTestResults"
            android:text="@string/submit_button" />


    </LinearLayout>


</ScrollView>